  * Bug fix: "Conflicting return type declarations of function init_env",
    thanks to Michael Tautschnig (Closes: #749680).
  * Converted the copyright file to DEP-5 format.
  * Moved the maintainer scripts to where dh wants them, and upodated the
    rules check to match.
  * Try to move towards reproducible builds; do not hard code local host
    in the configuration step.

 -- Manoj Srivastava <srivasta@debian.org>  Fri, 15 Jan 2016 12:50:38 -0800

mailagent (1:3.1-78-1) unstable; urgency=low

  * New upstream release
  * Ack NMUs. Move to a new build system based on dh

 -- Manoj Srivastava <srivasta@debian.org>  Sun, 27 Apr 2014 00:10:30 -0700

mailagent (1:3.1-74-0.4) unstable; urgency=low

  * Non-maintainer upload.
  * Fix "FTBFS with perl 5.18: POD issues":
    fix POD syntax in debian/getspam.
    (Closes: #720973)

 -- gregor herrmann <gregoa@debian.org>  Mon, 02 Sep 2013 21:54:42 +0200

mailagent (1:3.1-74-0.3) unstable; urgency=low

  * Non-maintainer upload.
  * Fix FTBFS with gcc-4.8 (Closes: #701316)

 -- Balint Reczey <balint@balintreczey.hu>  Mon, 12 Aug 2013 22:57:11 +0200

mailagent (1:3.1-74-0.2) unstable; urgency=low

  * Non-maintainer upload.
  * Fix pending l10n issues. Debconf translations:
    - Danish (Joe Hansen).  Closes: #605435

 -- Christian Perrier <bubulle@debian.org>  Tue, 17 Jan 2012 07:16:11 +0100

mailagent (1:3.1-74-0.1) unstable; urgency=high

  * Non-maintainer upload.
  * New upstream release
  * One bug was still present in the patch, this release fixes it.

 -- Julian Gilbey <jdg@debian.org>  Fri, 23 Dec 2011 10:02:19 +0000

mailagent (1:3.1-73-0.1) unstable; urgency=high

  * Non-maintainer upload.
  * New upstream release
  * Fixes the ctime.pl problem which was causing mail loss as in the
    previous upload, but corrects some bugs in my patch, hence
    urgency=high

 -- Julian Gilbey <jdg@debian.org>  Fri, 23 Dec 2011 09:44:10 +0000

mailagent (1:3.1-72-0.2) unstable; urgency=high

  * Non-maintainer upload.