@@ -8,8 +8,9 @@ mailagent (1:3.1-81-1) unstable; urgency=low
     rules check to match.
   * Try to move towards reproducible builds; do not hard code local host
     in the configuration step.
+  * use dpkg-buildflags to set the flags for configure to pick up.
 
- -- Manoj Srivastava <srivasta@debian.org>  Fri, 15 Jan 2016 12:50:38 -0800
+ -- Manoj Srivastava <srivasta@debian.org>  Fri, 15 Jan 2016 13:18:20 -0800
 
 mailagent (1:3.1-78-1) unstable; urgency=low
 
